dto. attachment image. history of messages

--- a/frontend/assets/chat.css
+++ b/frontend/assets/chat.css
@@ -30,7 +30,7 @@ div.tableRow p {
 #wrapper {
     margin:20px auto;
     padding-bottom:25px;
-    background-color:#49e5b1;
+    background-color:#4682B4;
     width:504px;
     border-radius: 15px;
     /* border:1px solid #000000;  */
